tests/baselines/reference/exportImportMultipleFiles.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== exportImportMultipleFiles_userCode.ts (0 errors) ====
    import lib = require('./exportImportMultipleFiles_library');
    lib.math.add(3, 4); // Shouldnt be error
    
==== exportImportMultipleFiles_math.ts (0 errors) ====
    export function add(a, b) { return a + b; }
    
==== exportImportMultipleFiles_library.ts (0 errors) ====
    export import math = require("exportImportMultipleFiles_math");
    math.add(3, 4); // OK
    